--- a/manifest.json
+++ b/manifest.json
@@ -1,7 +1,7 @@
 {
   "name": "Workout Tracker1",
   "short_name": "RyBy WOD",
-  "start_url": "*/*",
+  "start_url": "*://workout-2025.netlify.app/*",
   "display": "standalone",
   "background_color": "#000000",
   "theme_color": "#000000",
