--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
         "tsconfig-paths": "^4.2.0",
         "typescript": "^5.5.3",
         "typescript-eslint": "^8.3.0",
-        "vite": "^5.4.2"
+        "vite": "^5.4.2",
+        "vite-plugin-pwa": "^0.16.7"
       }
     }
