--- a/tsconfig.app.json
+++ b/tsconfig.app.json
@@ -1,12 +1,13 @@
 {
   "extends": "./tsconfig.json",
   "compilerOptions": {
-    "target": "ES2020", // Adjust as per your frontend requirements
+    "target": "ES2020",
     "module": "ESNext",
     "lib": ["DOM", "ES2020"],
-    "baseUrl": "src",
+    "baseUrl": ".",
     "paths": {
-      "@lib/*": ["lib/*"]
+      "@lib/*": ["./src/lib/*"],
+      "@components/*": ["./src/components/*"]
     }
   },
   "include": ["src/**/*"]
