--- a/tsconfig.node.json
+++ b/tsconfig.node.json
@@ -1,14 +1,15 @@
 {
   "extends": "./tsconfig.json",
   "compilerOptions": {
-    "target": "ES2022",  // For Node.js
+    "target": "ES2022",
     "lib": ["ES2023", "DOM"],
     "module": "ESNext",
     "moduleResolution": "node",
-    "baseUrl": "src",
+    "baseUrl": ".",
     "paths": {
-      "@lib/*": ["lib/*"]
+      "@lib/*": ["./src/lib/*"],
+      "@components/*": ["./src/components/*"]
     }
   },
-  "include": ["src/**/*"]
+  "include": ["vite.config.ts"]
 }
